--- a/public/style.css
+++ b/public/style.css
@@ -11,13 +11,43 @@ img{
   background-color: lightgoldenrodyellow;
 }
 
-/* Index.ejs styling */
+
+
 #indexLanding{
-  background-image: url(dumbbell.jpg) !important;
+  background-image: url(img/popCorn.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
+
+/* LOGIN PAGE */
+#loginLanding{
+  background-image: url(img/login_back.png) !important;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#profileLanding h1,body{
+  font-family: 'Fredericka the Great', cursive;
+  color:#f3cd88;
+  background-image: url(img/pro_back.png) !important;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+/*USER PROFILE*/
+/* #profileLanding{
+  
+} */
 
 /* Ordersystem.ejs styling */
 
-#orderSystem{
-  background-color: gray;
-}
+
+/* make sure i can add journal entires
+journal entries will contain date and person whocan view name and actual entry
+make sure stuff shows up on the dom displaying on EJS template
+wants person who makes journal entry to be able to add someone elses email so they can look at it 
+make it so that when those ppl log in they will be able to view the same template as USER */
+
+
