--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,23 +1,29 @@
 <!doctype html>
 <html>
 <head>
-    <title>21 Savage Fan Site</title>
+    <title>Movie Rater</title>
+
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="css/index.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Fruktur&family=Rubik+Glitch&display=swap" rel="stylesheet">
 </head>
 <body id="indexLanding">
 <div class="container">
 
     <div class="jumbotron text-center">
-        <h1>Cofee World</h1>
-        <img src="img/dumbbell.jpg" alt="Coffee mug">
+        <h1>Post Partum Direction</h1>
+        <img src="img/index.gif" alt="Coffee mug">
 
-        <p>Start Order</p>
+        <!-- <p>Start Order</p>
 
-        <a href="/orderSystem" class="btn btn-default"><span class="fa fa-user"></span>Start an Order</a>
+        <a href="/orderSystem" class="btn btn-default"><span class="fa fa-user"></span>Start an Order</a> -->
 
-        <p>Barista Login</p>
+        <p>User Login</p>
         <a href="/login" class="btn btn-default"><span class="fa fa-user"></span>Login</a>
         <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span>Signup</a>
 
