--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,5 +1,5 @@
 #profileLanding h1,body{
   font-family: 'Fredericka the Great', cursive;
   color:#f3cd88;
-  background-image: url(img/login_back.png)!important;
+ background-image: url('/Users/resilientcoders/Documents/rc2022A/week11/ppdCrudApp/public/img/thoughts.jpeg');
 }
