added charts & charts.esj

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -54,27 +54,29 @@
                                 <input required type="radio" name="emotion" id="tall" value="happy">
     
                                 <label for="grande">Sad</label>
-                                <input type="radio" name="emotion" id="grande" value="sad">
+                                <input type="radio" name="emotion" id="sad" value="sad">
     
                                 <label for="venti">Angry</label>
-                                <input type="radio" name="emotion" id="venti" value="angry">
+                                <input type="radio" name="emotion" id="angry" value="angry">
     
-                                <label for="venti">Frightened</label>
-                                <input type="radio" name="emotion" id="venti" value="frightened">
+                                <label for="venti">Anxious</label>
+                                <input type="radio" name="emotion" id="anxious" value="anxious">
     
                             </fieldset>
     
                             <fieldset>
                                 <legend>Stress Levels?</legend>
-    
-                                <label for="high">High</label>
-                                <input required type="radio" name="stressLevel" id="high" value="high">
-    
-                                <label for="medium">Medium</label>
-                                <input type="radio" name="stressLevel" id="medium" value="Medium">
-    
-                                <label for="low">Low</label>
-                                <input type="radio" name="stressLevel" id="low" value="low">
+
+                                <label for="cars">What is your stress level today? 
+                                    1 being the lowest and 5 being the highest.:</label>
+                                    
+                                    <select id="levels" name="stressLevel">
+                                      <option value="1">1</option>
+                                      <option value="2">2</option>
+                                      <option value="3">3</option>
+                                      <option value="4">4</option>
+                                      <option value="5">5</option>
+                                    </select>
                             </fieldset>
     
                             <fieldset>
