--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -34,6 +34,18 @@
             <label>Password</label>
             <input type="password" class="form-control" name="password">
         </div>
+        <fieldset>
+            <legend>Not A User but a Viewer?</legend>
+
+            <label for="cars">Which viewer are you?? :</label>
+                
+                <select id="viewerType" name="viewerType">
+                <option value="doctor">Doctor</option>
+                  <option value="partner">Partner</option>
+                  <option value="lovedOne">LovedOne</option>
+                  <option value="client">Client</option>
+                </select>
+        </fieldset>
 
         <button type="submit" class="btn btn-warning btn-lg">Signup</button>
     </form>
